engine/include/oaa/oaa.h


#define OAA_ABI_VERSION 5
#define OAA_MAX_CHANNELS 8
#define OAA_SCOPE_POINTS 1024
typedef enum {
  OAA_SOURCE_SILENCE = 0,
  OAA_SOURCE_TEST_TONE = 1,
  OAA_SOURCE_DEVICE = 2,
  OAA_SOURCE_FILE = 3,
  OAA_SOURCE_PUSH = 4
} oaa_source_kind;
#define OAA_FLAG_SOURCE_STOPPED (1u << 4)
typedef struct oaa_snapshot {
  uint64_t generation;
  double elapsed_seconds;
  uint32_t sample_rate;
  uint32_t channels;
  uint32_t flags; 
  uint32_t dropped_frames;
  float lufs_momentary;  
  float lufs_short;      
  float lufs_integrated; 
  float lra;             
  float true_peak;       
  float true_peak_max;   
  float sample_peak_max; 
  float reserved1;
  float dr_short;       
  float dr_integrated;  
  float crest;
  float plr;            
  float psr;            
  float reserved2;
  float correlation; 
  float balance;     
  float peak[OAA_MAX_CHANNELS];    
  float rms[OAA_MAX_CHANNELS];     
  float vu[OAA_MAX_CHANNELS];      
  uint32_t clip[OAA_MAX_CHANNELS];
  float spectrum[OAA_SPECTRUM_BANDS];
  float spectrum_peak[OAA_SPECTRUM_BANDS];
  float lra_low;  
  float lra_high; 
  float lra_gate; 
  float reserved3;
  float spectrum_pan[OAA_SPECTRUM_BANDS];
  float scope[OAA_SCOPE_POINTS * 2];
  float histogram[OAA_HISTOGRAM_BINS];
} oaa_snapshot;
#define OAA_DEVICE_ID_SYSTEM_OUTPUT "system-output"
typedef struct oaa_device_info {
  char id[OAA_DEVICE_ID_MAX];
  char name[OAA_DEVICE_NAME_MAX];
  uint32_t channels;
  uint32_t sample_rate;
  uint32_t is_default;
  uint32_t is_loopback;
} oaa_device_info;
typedef struct oaa_device_list oaa_device_list;
typedef struct oaa_config {
  uint32_t sample_rate; 
  uint32_t channels;    
  uint32_t source;       
  uint32_t block_frames; 
  const char *device_id;
} oaa_config;
typedef struct oaa_engine oaa_engine;
OAA_API oaa_engine *oaa_engine_create(const oaa_config *cfg);
OAA_API void oaa_engine_reset(oaa_engine *engine);
OAA_API int32_t oaa_engine_push(oaa_engine *engine, const float *interleaved,
                                uint32_t frames);
typedef struct oaa_file oaa_file;