packages/oaa_engine/lib/oaa_engine_bindings_generated.dart


/// ------------------------------------------------------------------------ */
/// /* Signal sources                                                            */
/// /* ------------------------------------------------------------------------
enum oaa_source_kind {
  /// Digital black. Useful for asserting that the meters actually fall to their
  /// floor rather than freezing at their last value.
  OAA_SOURCE_SILENCE(0),

  /// An internally generated test signal. This is not a toy: it is how the
  /// render path is benchmarked without an audio device attached, and how CI
  /// exercises the engine on machines that have no sound hardware at all.
  OAA_SOURCE_TEST_TONE(1),

  /// A hardware or loopback capture device. Phase 1.
  OAA_SOURCE_DEVICE(2),

  /// Reserved, and refused by oaa_engine_create. File analysis does not use a
  /// source of its own: the caller opens an oaa_file, creates an
  /// OAA_SOURCE_PUSH engine to match it, and pushes the blocks it decodes. That
  /// is what makes offline analysis the same `oaa_analyse` over the same buffers
  /// as realtime rather than a second path. The value stays allocated so that
  /// nothing else claims 3.
  OAA_SOURCE_FILE(3),

  /// The caller supplies the audio, synchronously, via oaa_engine_push().
  ///
  /// No thread is started and nothing is paced against a clock: a push returns
  /// once the block has been measured. That makes the engine a pure function of
  /// the samples it was given, which is what lets the conformance suite feed it
  /// a signal it constructed and assert on the result — no device, no timing,
  /// no flakiness. It is also the shape file analysis needs, so Phase 5 decodes
  /// into this rather than growing a second path.
  OAA_SOURCE_PUSH(4);

  final int value;
  const oaa_source_kind(this.value);

  static oaa_source_kind fromValue(int value) => switch (value) {
    0 => OAA_SOURCE_SILENCE,
    1 => OAA_SOURCE_TEST_TONE,
    2 => OAA_SOURCE_DEVICE,
    3 => OAA_SOURCE_FILE,
    4 => OAA_SOURCE_PUSH,
    _ => throw ArgumentError('Unknown value for oaa_source_kind: $value'),
  };
}

/// Everything the UI is allowed to draw, as one flat plain-old-data struct.
///
/// Field values are in the units named in each comment. dB values use -INFINITY
/// for true digital silence. A field the current build does not compute is NaN,
/// never zero — zero is a legitimate reading for correlation, balance and
/// several dB quantities, so it cannot double as "no data".
///
/// Layout rules, because dart:ffi reproduces this struct byte for byte:
/// - No pointers. No bitfields. No `bool`. Fixed-size arrays only.
/// - Widest members first, so natural alignment introduces no padding that
/// differs between compilers.
/// - The `reserved` members are explicit padding, named rather than left to
/// the compiler so that adding a float later does not shift every field
/// after it. They are public because a leading underscore would make the
/// generated Dart bindings private and trip the unused-field lint.
/// - Append new fields at the end, and bump OAA_ABI_VERSION when you do.
final class oaa_snapshot extends ffi.Struct {
  /// Increments every time the analysis thread publishes. The reader uses it to
  /// skip repainting when nothing has changed — at 120 fps against a ~47 Hz
  /// measurement rate, most frames have nothing new to say.
  @ffi.Uint64()
  external int generation;

  /// Seconds of signal measured since the last reset. Not wall-clock time: with
  /// a file source this advances far faster than real time, and that is the
  /// point.
  @ffi.Double()
  external double elapsed_seconds;

  @ffi.Uint32()
  external int sample_rate;

  @ffi.Uint32()
  external int channels;

  /// OAA_FLAG_*
  @ffi.Uint32()
  external int flags;

  /// Frames of audio that never reached the measurement, since the last reset.
  ///
  /// This is not a diagnostic counter. Integrated loudness averages every block
  /// since the reset, so a lost second does not make the reading slightly stale
  /// — it makes it an average of a different programme than the one that played.
  /// A non-zero value here means the integrated reading cannot be trusted, and
  /// the UI has to say so rather than quietly showing it.
  ///
  /// Two things land here, because to a measurement they are the same event.
  /// Frames the capture callback had to discard because the analysis thread fell
  /// behind are counted exactly, by the ring that refused them. Frames missed
  /// while the source was stopped (OAA_FLAG_SOURCE_STOPPED) are counted from the
  /// analysis clock instead, so they are approximate — to within the one block
  /// it takes to notice — because a producer that has gone away is not there to
  /// tell anyone what it did not produce. Approximate is the point: the number
  /// exists to prove audio was lost, and a gap reported as zero is a gap the
  /// user never hears about.
  @ffi.Uint32()
  external int dropped_frames;

  /// 400 ms window
  @ffi.Float()
  external double lufs_momentary;

  /// 3 s window
  @ffi.Float()
  external double lufs_short;

  /// gated, since reset
  @ffi.Float()
  external double lufs_integrated;

  /// loudness range, LU
  @ffi.Float()
  external double lra;

  /// max over a 3 s sliding window
  @ffi.Float()
  external double true_peak;

  /// max since reset
  @ffi.Float()
  external double true_peak_max;

  /// max since reset
  @ffi.Float()
  external double sample_peak_max;

  @ffi.Float()
  external double reserved1;

  /// true_peak - lufs_short,      LU
  @ffi.Float()
  external double dr_short;

  /// true_peak_max - lufs_integrated, LU
  @ffi.Float()
  external double dr_integrated;

  /// Crest factor in dB: sample peak minus RMS, both taken over the block just
  /// measured — not the held peak and the smoothed RMS the meters draw. Those
  /// settle at different rates, so their difference drifts on its own: it read
  /// 11.6 dB for a block of DC, where the answer is 0. A sine is 3.0103 dB.
  /// Multichannel reports the peakiest channel.
  @ffi.Float()
  external double crest;

  /// peak to loudness ratio,      LU
  @ffi.Float()
  external double plr;

  /// peak to short-term ratio,    LU
  @ffi.Float()
  external double psr;

  @ffi.Float()
  external double reserved2;

  /// -1 fully out of phase .. +1 mono
  @ffi.Float()
  external double correlation;

  /// -1 hard left .. +1 hard right
  @ffi.Float()
  external double balance;

  /// dBFS, with the meter's hold applied
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Float> peak;

  /// dBFS, with the meter's decay applied
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Float> rms;

  /// VU, 300 ms ballistics, 0 VU = calibration
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Float> vu;

  /// The longest run of consecutive full-scale samples since the last reset —
  /// latched, not live. A live run is zeroed by the next sample below full
  /// scale, so a publish would carry whatever it happened to be at the block
  /// boundary and every clip that ended mid-block would read zero. Non-zero
  /// here means "this channel clipped, and the worst run was this long"; it
  /// stays non-zero until oaa_engine_reset.
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint32> clip;

  /// --- Spectrum, dBFS per log-spaced band ------------------------------- */
  /// /* The most recent FFT frame. Instantaneous, so it is a measurement of a
  /// moment rather than an average of several.
  @ffi.Array.multi([512])
  external ffi.Array<ffi.Float> spectrum;

  /// Peak hold over *every* FFT frame since the last publish, then a 1.5 s hold
  /// and a 12 dB/s fall.
  ///
  /// This is not redundant with a hold the UI could keep itself, and the reason
  /// is worth stating: the analyser runs an FFT every hop, and a publish carries
  /// only the last one. A hold computed from published frames would therefore
  /// miss every transient that landed between them, which is the single thing a
  /// peak hold exists to catch.
  @ffi.Array.multi([512])
  external ffi.Array<ffi.Float> spectrum_peak;

  /// 10th percentile of the gated short-term distribution
  @ffi.Float()
  external double lra_low;

  /// 95th percentile
  @ffi.Float()
  external double lra_high;

  /// relative gate: ungated mean - 20 LU
  @ffi.Float()
  external double lra_gate;

  @ffi.Float()
  external double reserved3;

  /// Energy balance per spectrum band: -1 entirely left, +1 entirely right, 0
  /// centred. Zero for mono, and meaningless for a band with no energy in it —
  /// read `spectrum` first and skip bands at the floor, because the pan of
  /// silence is not a direction.
  @ffi.Array.multi([512])
  external ffi.Array<ffi.Float> spectrum_pan;

  /// The last OAA_SCOPE_POINTS stereo frames, interleaved x=left, y=right,
  /// oldest first. Raw sample values, **not** rotated into goniometer axes:
  /// that rotation is a display choice, and doing it here would bake one
  /// module's convention into the ABI every other consumer has to undo. Mono
  /// publishes the same value in both, which draws the diagonal it should.
  @ffi.Array.multi([2048])
  external ffi.Array<ffi.Float> scope;

  /// Fraction of the gated short-term blocks that fell in each bin, so the bins
  /// sum to 1 and the UI needs no total. All zero before the first gated block
  /// exists.
  @ffi.Array.multi([120])
  external ffi.Array<ffi.Float> histogram;
}

final class oaa_device_info extends ffi.Struct {
  /// Opaque, platform-specific, and stable enough to store in a preset. Pass it
  /// back in oaa_config.device_id.
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> id;

  /// What to show a human.
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> name;

  @ffi.Uint32()
  external int channels;

  @ffi.Uint32()
  external int sample_rate;

  /// Non-zero when this is the system's default capture device.
  @ffi.Uint32()
  external int is_default;

  /// Non-zero when this device captures the system's own output rather than a
  /// physical input.
  ///
  /// Set for WASAPI's loopback devices, which report it natively, and for the
  /// macOS process tap offered under OAA_DEVICE_ID_SYSTEM_OUTPUT, which is one
  /// by construction. It stays zero for a *virtual* loopback — BlackHole, a
  /// PipeWire monitor — because those are indistinguishable from a real input
  /// and reporting a guess would be worse than reporting nothing. So: this
  /// labels a device that certainly captures system output, and its absence
  /// says nothing about whether some other device in the list also does.
  @ffi.Uint32()
  external int is_loopback;
}

final class oaa_device_list extends ffi.Opaque {}

final class oaa_config extends ffi.Struct {
  /// 0 asks the source to pick
  @ffi.Uint32()
  external int sample_rate;

  /// 1..OAA_MAX_CHANNELS
  @ffi.Uint32()
  external int channels;

  /// oaa_source_kind
  @ffi.Uint32()
  external int source;

  /// analysis block size; 0 selects a sane default
  @ffi.Uint32()
  external int block_frames;

  /// Which capture device, for OAA_SOURCE_DEVICE. NULL means the system
  /// default, and OAA_DEVICE_ID_SYSTEM_OUTPUT means the system's own output
  /// where that is offered. Copied during oaa_engine_create; the caller need
  /// not keep it.
  external ffi.Pointer<ffi.Char> device_id;
}

final class oaa_engine extends ffi.Opaque {}
